--- a/systemctl/puckgo.service
+++ b/systemctl/puckgo.service
@@ -3,9 +3,10 @@ Description=proxy
 
 [Service]
 Type=simple
-#Restart=always
-#StandardOutput=syslog
-#StandardError=syslog
+Restart=always
+StandardOutput=syslog
+StandardError=syslog
+SyslogIdentifier=puckgo
 ExecStart=/usr/local/bin/puckgo
 
 [Install]
